# cytube-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cytube_chat.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cytube_cli/: __init__.py  __main__.py  auth.py  cli.py  client.py  colors.py  server.py
tests/: test_smoke.py  test_unit.py
