[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cytube-cli"
dynamic = ["version"]
description = "Terminal chat client for cytu.be rooms"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "python-socketio[client]>=5.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "pyright>=1.1.395",
    "pre-commit>=4",
]

[project.scripts]
cytube-chat = "cytube_cli.cli:main"

[tool.setuptools.packages.find]
include = ["cytube_cli*"]

[tool.setuptools.dynamic]
version = { attr = "cytube_cli.__version__" }

# ── Ruff ──────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W",      # pycodestyle
    "F",           # pyflakes
    "I",           # isort
    "B",           # flake8-bugbear
    "C4",          # flake8-comprehensions
    "UP",          # pyupgrade
]
ignore = [
    "B008",        # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Pyright ───────────────────────────────────────────────────────

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.10"
reportOptionalCall = false       # socketio decorator false positives
reportMissingTypeStubs = false
